# parammodel2mjcf

./: .gitignore  LICENSE  editor3dJson.json  editor3d_model.xml  export_mjcf.py  parse_editor3d_json.py  pyproject.toml  test.xml  test_new.xml  test_tree.json
archive/: export_mjcf.py
output/: three_drawers.xml
param2mjcf/: __init__.py  cli.py  generator.py  loader.py  topology.py  types.py  utils.py
param2mjcf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
