[project]
name = "param2mjcf"
version = "0.1.0"
description = "A tool to convert parametric models (JSON) to MJCF (XML) for MuJoCo physics simulation."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "mujoco",
    "scipy",
]

[project.scripts]
param2mjcf = "param2mjcf.cli:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["param2mjcf"]
